force-app/main/default/objects/Data_Transformation__mdt/Data_Transformation__mdt.object-meta.xml
<CustomObject>
    <label>Data Transformation</label>
    <pluralLabel>Data Transformations</pluralLabel>
</CustomObject>