force-app/main/default/objects/Data_Transformation__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API Name of the field</description>
    <inlineHelpText>API Name of the field</inlineHelpText>
    <label>Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>