force-app/main/default/objects/Data_Transformation__mdt/fields/Incoming_Data__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Data__c</fullName>
    <description>Data that is received form the upload file</description>
    <inlineHelpText>Data that is received form the upload file</inlineHelpText>
    <label>Incoming Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>