force-app/main/default/objects/Data_Transformation__mdt/fields/Updated_Data__c.field-meta.xml
<CustomField>
    <fullName>Updated_Data__c</fullName>
    <description>The corrected value based on the Incoming Value</description>
    <inlineHelpText>The corrected value based on the Incoming Value</inlineHelpText>
    <label>Updated Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>