force-app/main/default/objects/Data_Transformation__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Incoming_Data__c</columns>
    <columns>Updated_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>